# prob-sat-vs-gsat

./: .gitignore  LICENSE  README.md  create_dataset.sh  gen_csv.sh  main.ipynb  main.py  pyproject.toml  res.csv  res_old.csv  sample_dimacs
prob_sat/: __init__.py  inst.py  solver.py
