[tool.poetry]
name = "prob-sat"
version = "0.1.0"
description = ""
authors = ["Narek Vardanjan <vardanar@fit.cvut.cz>"]
readme = "README.md"
packages = [{include = "prob_sat"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
black = "^22.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
